# rustbot

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/config/: config.rs
src/content/: content.rs  mod.rs  part.rs  role.rs
